Small alignment fix to search options in right sidebar.

--- a/style.css
+++ b/style.css
@@ -1252,6 +1252,11 @@
 	    margin-top: 7px !important;
 	}
 	
+	#searchexpando select {
+		font-size: 13px !important;
+		margin-left: 3px !important;
+	}
+	
 	/* search page itself */
 	
 	.search-page #search {
